# telecaster-server

./: .gitignore  .gitmodules  INSTALL  INSTALL.rst  README  README.rst  debian-requirements.txt  forms.py  install.py  models.py  pre-barreau.xml  pre-barreau_courses.txt  pre-barreau_departments.txt  setup.py  station.py  telecaster.py  telecaster_old.py  teleoddcast.cfg  teleoddcast.css  teleoddcast.py  teleoddcast.xml  teleoddcast_dev.py  teleoddcast_dev2.py  tools.py  urls.py  views.py  webview.py
conf/etc/apache2/: default  default.conf
conf/etc/apache2/sites-available/: telecaster.conf
conf/etc/cron.d/: telecaster  telecaster_cleanup  telecaster_restart  telecaster_rsync
conf/etc/default/: jackd  vncserver
conf/etc/icecast2/: icecast.xml
conf/etc/init.d/: jackd  telecaster  telecaster-video  vncserver
conf/etc/network/if-up.d/: telecaster-rsync
conf/etc/pm/sleep.d/: telecaster_suspend
conf/etc/stream-m/: server.conf
conf/etc/telecaster/: deefuzzer.xml  deefuzzer_audio_safe.xml  deefuzzer_mp3.xml  deefuzzer_ogg.xml  deefuzzer_safe.xml  deefuzzer_safe_mp3.xml  deefuzzer_safe_ogg.xml  deefuzzer_video_safe.xml  edcast_jack_local.cfg  edcast_jack_local_ogg.cfg  pre-barreau_conferences.xml  telecaster.xml  telecaster_edcast_mp3.cfg  telecaster_pb.xml
conf/etc/telecaster/deefuzzer/: telecaster_mp3_default.xml  telecaster_webm_default.xml
conf/etc/telecaster/old/: telecaster.xml  telecaster_pb.xml
conf/etc/telecaster/tests/: deefuzzer_audio_safe.xml  deefuzzer_video.xml  telecaster_audio_monitor.xml
conf/home/.fluxbox/: autostart.sh
conf/home/fluxbox/: autostart.sh  init  startup.ubuntu  tc_audio_start.sh
conf/home/fluxbox/telecaster/: gst_video_double_shout  gst_video_double_shout2.sh  gst_video_simple_ogg  rtpx264.sh  tc_video_simple_start.sh  tc_video_simple_webm_stream_hd_jack_test.sh  tc_video_simple_webm_stream_m.sh  x264_relay_x.sh  x_jack_webm.sh
conf/home/jack-rack/: eq_comp_limit_02.rack
conf/home/telecaster/.fluxbox/: autostart.sh  init
conf/home/vnc/: xstartup
conf/usr/share/applications/: rotate_desktop.desktop
css/: telecaster.css
doc/: compile_gst.txt
etc/: default.xml  default_conferences.xml  localhost.xml  pre-barreau.xml  pre-barreau_conferences.xml  pre-barreau_courses.xml  telecaster.cfg  telecaster.xml  telecaster_cellar_mp3.xml  telecaster_default_broadcasting.xml  telecaster_edcast_mp3.cfg  telecaster_mp3.cfg  telecaster_mp3.xml  teleoddcast.cfg  teleoddcast.xml
etc/apache2/: default.conf
etc/fluxbox/: autostart.sh  init
etc/jackd/: jackd  jackd.conf
etc/restartd/: restartd.conf
etc/vncserver/: vncserver  xstartup
example/: settings.py  urls.py
export/: core.py
htdocs/css/: telecaster.css
js/: rssajax.js
libs/edcast-jack/: config.status  libtool
libs/edcast-jack/.deps/: edcast.Po
libs/edcast-jack/libedcast/.deps/: cbuffer.Po  libedcast.Po
libs/stream-m/: run.sh
src/etc/cron.d/: telecaster
src/etc/default/: stream-m
src/etc/init.d/: telecaster  uwsgi
src/etc/modprobe.d/: telecaster.conf
src/etc/telecaster/deefuzzer/: telecaster_mp3_default.xml  telecaster_mp3_default_nostreaming.xml  telecaster_webm_default.xml  telecaster_webm_default_nostreaming.xml  telecaster_webm_monitor.yaml
src/etc/telecaster/jack-rack/: eq_comp_limit_02_old.rack
src/etc/telecaster/tests/: deefuzzer.xml  telecaster_audio_monitor2.yaml
src/etc/uwsgi/apps-available/: telecaster.ini
src/etc/uwsgi/apps-enable/: telecaster.ini
src/home/telecaster/.fluxbox/: autostart.sh  startup
tcserver/: __init__.py  install.py
tcserver/conf/etc/cron.d/: telecaster_cleanup  telecaster_import  telecaster_restart  telecaster_rsync  telecaster_vnc_restart
tcserver/conf/etc/default/: jackd
tcserver/conf/etc/init.d/: jackd  stream-m  telecaster  telecaster-audio  (+2 more)
tcserver/lib/edcast-jack/: Makefile  aclocal.m4  config.status  configure  configure.in  edcast_jack
tcserver/lib/edcast-jack/libedcast/: Makefile  Makefile.am  Makefile.in  libedcast.h
tcserver/lib/edcast-jack/libedcast/.deps/: Socket.Po  resample.Po
telecaster/: admin.py  install.py  models.py  urls.py  views.py
telecaster/export/: api.py  tools.py
telecaster/htdocs/css/: telecaster.css
telecaster/htdocs/images/: rotate_desktop.desktop
telecaster/htdocs/js/: application.js
telecaster/htdocs/video-js/: video.js  video.min.js
telecaster/jack/: jack.py
telecaster/migrations/: 0001_initial.py  0002_auto__chg_field_session_description__chg_field_department_description_.py  0003_auto__add_record.py  0004_auto__chg_field_station_professor__chg_field_station_session__chg_fiel.py  0005_auto__chg_field_station_professor__chg_field_station_session__chg_fiel.py  0006_auto__chg_field_station_conference__chg_field_station_professor__chg_f.py  0007_auto__chg_field_station_datetime_start.py  0008_auto__chg_field_station_datetime_start.py  0009_auto__add_field_station_professor_free.py  0010_auto__chg_field_station_comment.py
telecaster/templates/telecaster/: base.html  start.html  stop.html
telecaster/templatetags/: telecaster_utils.py
telecaster/tools/: __init__.py  acpi.py  status.py  tools.py
telecaster/tools/scripts/: ffmpeg_dv_jack_fifo_usb_gst  gst_video_double_shout
templates/telecaster/: base.html  start.html  stop.html
tests/: audio_video_crossfade.py  control_mixer_osc.py  control_mixer_parallel_no_effects.py  control_zoom_exp_osc.py  cross-fade_2.py  ffmpeg_dv_jack_fifo_shout  ffmpeg_usb_jack_fifo_shout  gst_h264_jack_webm.sh  gst_h264_src.sh  gst_osc_multi.py  osc_play.py  osc_record_stop.py  osc_test.py  radiodelay.py  tc_video_only_simple_webm.sh  tc_video_simple_file_webm.sh  tc_video_simple_webm_stream.sh  tc_video_simple_webm_stream_hd.sh  tc_video_simple_webm_stream_hd_alsa_test.sh  tc_video_simple_webm_stream_sd_test.sh  video_player_qt.py  vumeter.py  webcam.sh  x264_pl2.sh  x264_relay.sh
tools/: __init__.py  acpi.py  ffmpeg_dv_jack_fifo_usb  ffmpeg_dv_jack_fifo_usb_gst  tools.py  xmltodict.py
tools/edcast-jack/: edcast.cpp
tools/edcast-jack/conf/: sample.cfg
tools/edcast-jack/libedcast/: Makefile  cbuffer.h
(+84 files in other folders)
